@@ -19,35 +19,46 @@ package io.ballerina.cli.launcher;
 
 import io.ballerina.cli.BLauncherCmd;
 import io.ballerina.cli.launcher.util.BalToolsUtil;
+import io.ballerina.projects.BalToolsManifest;
+import io.ballerina.projects.BalToolsToml;
+import io.ballerina.projects.internal.BalToolsManifestBuilder;
 import io.ballerina.runtime.api.values.BError;
+import org.wso2.ballerinalang.util.RepoUtils;
 import picocli.CommandLine;
 
 import java.io.IOException;
 import java.io.PrintStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import static io.ballerina.cli.launcher.BallerinaCliCommands.HELP;
+import static io.ballerina.projects.util.ProjectConstants.BAL_TOOLS_TOML;
+import static io.ballerina.projects.util.ProjectConstants.CONFIG_DIR;
 
 /**
  * Contains utility methods for executing a Ballerina program.
  *
  * @since 0.8.0
  */
-public class LauncherUtils {
+public final class LauncherUtils {
+
+    private LauncherUtils() {
+    }
 
     public static Path getSourceRootPath(String sourceRoot) {
         // Get source root path.
         Path sourceRootPath;
         if (sourceRoot == null || sourceRoot.isEmpty()) {
-            sourceRootPath = Paths.get(System.getProperty("user.dir"));
+            sourceRootPath = Path.of(System.getProperty("user.dir"));
         } else {
             try {
-                sourceRootPath = Paths.get(sourceRoot).toRealPath(LinkOption.NOFOLLOW_LINKS);
+                sourceRootPath = Path.of(sourceRoot).toRealPath(LinkOption.NOFOLLOW_LINKS);
             } catch (IOException e) {
                 throw new RuntimeException("error reading from directory: " + sourceRoot + " reason: " +
                         e.getMessage(), e);
@@ -75,17 +86,24 @@ public class LauncherUtils {
 
     public static BLauncherException createLauncherException(String errorPrefix, Throwable cause) {
         String message;
-        if (cause instanceof BError) {
-            message = ((BError) cause).getPrintableStackTrace();
+        if (cause instanceof BError bError) {
+            message = bError.getPrintableStackTrace();
         } else {
-            message = cause.toString();
+            StringWriter sw = new StringWriter();
+            cause.printStackTrace(new PrintWriter(sw));
+            message = sw.toString();
         }
         BLauncherException launcherException = new BLauncherException();
         launcherException.addMessage("error: " + errorPrefix + message);
         return launcherException;
     }
 
-    static void printLauncherException(BLauncherException e, PrintStream outStream) {
+
+    public static String prepareCompilerErrorMessage(String message) {
+        return "error: " + LauncherUtils.makeFirstLetterLowerCase(message);
+    }
+
+    public static void printLauncherException(BLauncherException e, PrintStream outStream) {
         List<String> errorMessages = e.getMessages();
         errorMessages.forEach(outStream::println);
     }
@@ -103,13 +121,24 @@ public class LauncherUtils {
         StringBuilder helpBuilder = new StringBuilder();
         helpBuilder.append(BLauncherCmd.getCommandUsageInfo(HELP));
 
+        Path balToolsTomlPath = RepoUtils.createAndGetHomeReposPath().resolve(CONFIG_DIR).resolve(BAL_TOOLS_TOML);
+        BalToolsToml balToolsToml = BalToolsToml.from(balToolsTomlPath);
+        BalToolsManifest balToolsManifest = BalToolsManifestBuilder.from(balToolsToml).build();
+        Map<String, String> activeToolsVsRepos = new HashMap<>();
+
         // if there are any tools, add Tool Commands section
         List<String> toolNames = subCommands.keySet().stream()
                 .filter(BalToolsUtil::isNonBuiltInToolCommand)
                 .sorted().toList();
+
         if (!toolNames.isEmpty()) {
+            toolNames.forEach(toolName ->
+                balToolsManifest.getActiveTool(toolName).ifPresent(tool ->
+                    activeToolsVsRepos.put(toolName, tool.repository() == null ? "" : "[" + tool.repository()
+                            .toUpperCase() + "] ")));
             helpBuilder.append("\n\n   Tool Commands:");
-            toolNames.forEach(key -> generateCommandDescription(subCommands.get(key), helpBuilder));
+            toolNames.forEach(key -> generateCommandDescription(subCommands.get(key), helpBuilder,
+                    activeToolsVsRepos.get(key)));
         }
         return helpBuilder.toString();
     }
@@ -124,7 +153,8 @@ public class LauncherUtils {
         return commandUsageInfo.toString();
     }
 
-    private static void generateCommandDescription(CommandLine command, StringBuilder stringBuilder) {
+    private static void generateCommandDescription(CommandLine command, StringBuilder stringBuilder,
+                                                   String repository) {
         String commandName = command.getCommandName();
         BLauncherCmd bLauncherCmd = (BLauncherCmd) command.getCommandSpec().userObject();
         CommandLine.Command annotation = bLauncherCmd.getClass().getAnnotation(CommandLine.Command.class);
@@ -138,7 +168,7 @@ public class LauncherUtils {
         }
         stringBuilder.append("\n")
                 .append("        ")
-                .append(String.format("%-15s %s", commandName, commandDescription));
+                .append(String.format("%-15s %s", commandName, repository + commandDescription));
     }
 
     static String wrapString(String str, int wrapLength, int indent) {
