@@ -31,7 +31,6 @@ import io.ballerina.compiler.syntax.tree.TransactionStatementNode;
 import io.ballerina.compiler.syntax.tree.TransactionalExpressionNode;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This class will check whether an import statement to internal transaction repo is needed or not.
@@ -72,7 +71,7 @@ public class TransactionImportValidator extends NodeVisitor {
     @Override
     public void visit(FunctionDefinitionNode functionDefinitionNode) {
         List<String> qualifiers = functionDefinitionNode.qualifierList().stream().map(Token::text)
-                .collect(Collectors.toList());
+                .toList();
         if (qualifiers.contains(SyntaxKind.TRANSACTIONAL_KEYWORD.stringValue()) &&
                 qualifiers.contains(SyntaxKind.RESOURCE_KEYWORD.stringValue())) {
             importTransactionPackage = true;
@@ -85,6 +84,7 @@ public class TransactionImportValidator extends NodeVisitor {
         importTransactionPackage = true;
     }
 
+    @Override
     protected void visitSyntaxNode(Node node) {
         if (importTransactionPackage) {
             return;
