@@ -18,6 +18,10 @@
 
 package org.wso2.ballerinalang.compiler.bir.optimizer;
 
+import org.wso2.ballerinalang.compiler.bir.codegen.model.JLargeArrayInstruction;
+import org.wso2.ballerinalang.compiler.bir.codegen.model.JLargeMapInstruction;
+import org.wso2.ballerinalang.compiler.bir.codegen.model.JMethodCallInstruction;
+import org.wso2.ballerinalang.compiler.bir.codegen.optimizer.LargeMethodOptimizer;
 import org.wso2.ballerinalang.compiler.bir.model.BIRAbstractInstruction;
 import org.wso2.ballerinalang.compiler.bir.model.BIRNode;
 import org.wso2.ballerinalang.compiler.bir.model.BIRNode.BIRBasicBlock;
@@ -32,6 +36,7 @@ import org.wso2.ballerinalang.compiler.bir.model.BIRTerminator;
 import org.wso2.ballerinalang.compiler.bir.model.BIRVisitor;
 import org.wso2.ballerinalang.compiler.bir.model.InstructionKind;
 import org.wso2.ballerinalang.compiler.bir.model.VarKind;
+import org.wso2.ballerinalang.compiler.semantics.model.SymbolTable;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BType;
 import org.wso2.ballerinalang.compiler.util.CompilerContext;
 import org.wso2.ballerinalang.compiler.util.TypeTags;
@@ -45,7 +50,6 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Optimize BIR.
@@ -59,6 +63,7 @@ public class BIROptimizer {
     private final LHSTempVarOptimizer lhsTempVarOptimizer;
     private final BIRLockOptimizer lockOptimizer;
     private final BIRBasicBlockOptimizer bbOptimizer;
+    private final LargeMethodOptimizer largeMethodOptimizer;
 
     public static BIROptimizer getInstance(CompilerContext context) {
         BIROptimizer birGen = context.get(BIR_OPTIMIZER);
@@ -75,12 +80,14 @@ public class BIROptimizer {
         this.lhsTempVarOptimizer = new LHSTempVarOptimizer();
         this.lockOptimizer = new BIRLockOptimizer();
         this.bbOptimizer = new BIRBasicBlockOptimizer();
+        this.largeMethodOptimizer = new LargeMethodOptimizer(SymbolTable.getInstance(context));
     }
 
     public void optimizePackage(BIRPackage pkg) {
         // RHS temp var optimization
         pkg.accept(this.rhsTempVarOptimizer);
-
+        // Split large BIR functions into smaller methods based on maps and arrays
+        largeMethodOptimizer.splitLargeBIRFunctions(pkg);
         // LHS temp var optimization
         this.lhsTempVarOptimizer.optimizeNode(pkg, null);
 
@@ -89,6 +96,10 @@ public class BIROptimizer {
 
         // Optimize BB - unnecessary goto removal
         bbOptimizer.optimizeNode(pkg, null);
+
+        // Optimize record value creation for default values - remove unnecessary method call
+        BIRRecordValueOptimizer recordValueOptimizer = new BIRRecordValueOptimizer();
+        recordValueOptimizer.optimizeNode(pkg);
     }
 
     /**
@@ -266,9 +277,8 @@ public class BIROptimizer {
             birFunction.errorTable.forEach(ee -> this.optimizeNode(ee, funcOpEnv));
 
             // Remove unused temp vars
-            birFunction.localVars = birFunction.localVars.stream()
-                    .filter(l -> l.kind != VarKind.TEMP || !funcOpEnv.tempVars
-                            .containsKey(l)).collect(Collectors.toList());
+            birFunction.localVars = new ArrayList<>(birFunction.localVars.stream()
+                    .filter(l -> l.kind != VarKind.TEMP || !funcOpEnv.tempVars.containsKey(l)).toList());
             // Reuse lhs temp vars
             Set<BIRVariableDcl> replaceableVarSet = new HashSet<>();
             reuseTempVariables(birFunction.localVars, funcOpEnv.tempVarsList, replaceableVarSet);
@@ -468,6 +478,16 @@ public class BIROptimizer {
             this.optimizeNode(workerSend.data, this.env);
         }
 
+        @Override
+        public void visit(BIRTerminator.WorkerAlternateReceive workerReceive) {
+            this.optimizeNode(workerReceive.lhsOp, this.env);
+        }
+
+        @Override
+        public void visit(BIRTerminator.WorkerMultipleReceive workerReceive) {
+            this.optimizeNode(workerReceive.lhsOp, this.env);
+        }
+
         // Non-terminating instructions
 
         @Override
@@ -491,14 +511,10 @@ public class BIROptimizer {
                 return false;
             }
             int typeTag = variableDcl.type.tag;
-            switch (typeTag) {
-                case TypeTags.BYTE:
-                case TypeTags.BOOLEAN:
-                case TypeTags.FLOAT:
-                    return true;
-                default:
-                    return TypeTags.isIntegerTypeTag(typeTag);
-            }
+            return switch (typeTag) {
+                case TypeTags.BYTE, TypeTags.BOOLEAN, TypeTags.FLOAT -> true;
+                default -> TypeTags.isIntegerTypeTag(typeTag);
+            };
         }
 
         @Override
@@ -742,6 +758,33 @@ public class BIROptimizer {
         public void visit(BIRNonTerminator.NewReFlagOnOff reFlagOnOff) {
             this.optimizeNode(reFlagOnOff.lhsOp, this.env);
             this.optimizeNode(reFlagOnOff.flags, this.env);
+        }
+
+        @Override
+        public void visit(BIRNonTerminator.RecordDefaultFPLoad recordDefaultFPLoad) {
+            this.optimizeNode(recordDefaultFPLoad.lhsOp, this.env);
+        }
+
+        @Override
+        public void visit(JMethodCallInstruction jMethodCallInstruction) {
+            for (BIROperand arg : jMethodCallInstruction.args) {
+                this.optimizeNode(arg, this.env);
+            }
+        }
+
+        @Override
+        public void visit(JLargeArrayInstruction jLargeArrayInstruction) {
+            this.optimizeNode(jLargeArrayInstruction.lhsOp, this.env);
+            this.optimizeNode(jLargeArrayInstruction.sizeOp, this.env);
+            this.optimizeNode(jLargeArrayInstruction.values, this.env);
+            this.optimizeNode(jLargeArrayInstruction.typedescOp, this.env);
+        }
+
+        @Override
+        public void visit(JLargeMapInstruction jLargeMapInstruction) {
+            this.optimizeNode(jLargeMapInstruction.lhsOp, this.env);
+            this.optimizeNode(jLargeMapInstruction.rhsOp, this.env);
+            this.optimizeNode(jLargeMapInstruction.initialValues, this.env);
         }
 
         // Operands
