@@ -48,14 +48,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Builds package resolution test cases.
  *
  * @since 2.0.0
  */
-public class PackageResolutionTestCaseBuilder {
+public final class PackageResolutionTestCaseBuilder {
 
     private PackageResolutionTestCaseBuilder() {
     }
@@ -101,7 +100,7 @@ public class PackageResolutionTestCaseBuilder {
                                                             PackageDescriptor rootPkgDes) {
         return rootPkgDescWrapper.modules().stream()
                 .map(modNameStr -> Utils.getModuleName(rootPkgDes.name(), modNameStr))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static DependencyGraph<DependencyNode> getPkgDescGraph(Path dotFilePath) {
@@ -142,7 +141,7 @@ public class PackageResolutionTestCaseBuilder {
 
     private static DependencyManifest getDependencyManifest(Path dependenciesTomlPath) {
         if (dependenciesTomlPath == null) {
-            return DependencyManifest.from("2.0.0", null, Collections.emptyList());
+            return DependencyManifest.from("2.0.0", null, Collections.emptyList(), Collections.emptyList());
         }
 
         List<DependencyManifest.Package> recordedDeps = new ArrayList<>();
@@ -157,15 +156,16 @@ public class PackageResolutionTestCaseBuilder {
             }
 
             PackageDescriptor pkgDesc = Utils.getPkgDescFromNode(node.name().value(), null);
+            List<DependencyManifest.Module> modules = Utils.getDependencyModules(pkgDesc, attrs.get("modules"));
             recordedDeps.add(new DependencyManifest.Package(pkgDesc.name(), pkgDesc.org(), pkgDesc.version(),
-                    scope.getValue(), isTransitive, Collections.emptyList(), Collections.emptyList()));
+                    scope.getValue(), isTransitive, Collections.emptyList(), modules));
         }
-        return DependencyManifest.from("2.0.0", null, recordedDeps);
+        return DependencyManifest.from("2.0.0", null, recordedDeps, Collections.emptyList());
     }
 
     private static PackageManifest getPackageManifest(Path balTomlPath, PackageDescriptor rootPkgDesc) {
         if (balTomlPath == null) {
-            return PackageManifest.from(rootPkgDesc, null, Collections.emptyMap(),
+            return PackageManifest.from(rootPkgDesc, null, null, Collections.emptyMap(),
                     Collections.emptyList());
         }
 
@@ -187,7 +187,7 @@ public class PackageResolutionTestCaseBuilder {
                     pkgDesc.org(), pkgDesc.version(), repo, new NullLocation()));
         }
 
-        return PackageManifest.from(rootPkgDesc, null, Collections.emptyMap(), dependencies);
+        return PackageManifest.from(rootPkgDesc, null, null, Collections.emptyMap(), dependencies);
     }
 
     private static PackageDescWrapper getRootPkgDescWrapper(Path appDotFilePath) {
