@@ -25,18 +25,21 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Test the parser.
  */
-public class TestParser {
+public final class TestParser {
 
     private static final PrintStream OUT = System.out;
 
+    private TestParser() {
+    }
+
     public static void main(String[] args) throws IOException {
         String path = TestParser.class.getClassLoader().getResource("test_parser.bal").getPath();
-        String content = new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
+        String content = new String(Files.readAllBytes(Path.of(path)), StandardCharsets.UTF_8);
         testParser(content);
     }
 
