@@ -46,7 +46,10 @@ import java.util.stream.Collectors;
  *
  * @since 2201.1.1
  */
-public class NameUtil {
+public final class NameUtil {
+
+    private NameUtil() {
+    }
 
     /**
      * Generates a random name.
@@ -87,22 +90,28 @@ public class NameUtil {
                 name = typeSymbol.getName().get();
             } else {
                 TypeSymbol rawType = CommonUtil.getRawType(typeSymbol);
-                switch (rawType.typeKind()) {
-                    case RECORD:
-                        name = "mappingResult";
-                        break;
-                    case TUPLE:
-                    case ARRAY:
-                        name = "listResult";
-                        break;
-                    default:
-                        name = rawType.typeKind().getName() + "Result";
-                        break;
-                }
+                name = generateNameForRawType(rawType.typeKind());
             }
             return generateVariableName(1, name, names);
         } else {
             return generateName(1, names);
+        }
+    }
+
+    /**
+     * Generates a variable name based on the provided signature.
+     *
+     * @param signature The type or name signature.
+     * @param names     The set of existing names to avoid duplicates.
+     * @return The generated variable name.
+     */
+    public static String generateVariableName(String signature, Set<String> names) {
+        try {
+            TypeDescKind typeDescKind = TypeDescKind.valueOf(signature);
+            return generateVariableName(1, generateNameForRawType(typeDescKind), names);
+        } catch (IllegalArgumentException ignored) {
+            String camelCase = toCamelCase(signature);
+            return generateVariableName(1, camelCase, names);
         }
     }
 
@@ -174,7 +183,7 @@ public class NameUtil {
             }
 
             return -3;
-        }).filter(integer -> integer >= 0).sorted().collect(Collectors.toList());
+        }).filter(integer -> integer >= 0).sorted().toList();
 
         for (int i = 0; i < suffixList.size(); i++) {
             Integer suffix = suffixList.get(i);
@@ -211,7 +220,7 @@ public class NameUtil {
      * @return Signature
      */
     public static String getModifiedTypeName(DocumentServiceContext context, TypeSymbol typeSymbol) {
-        String typeSignature = typeSymbol.typeKind() == 
+        String typeSignature = typeSymbol.typeKind() ==
                 TypeDescKind.COMPILATION_ERROR ? "" : typeSymbol.signature();
         return CommonUtil.getModifiedSignature(context, typeSignature);
     }
@@ -264,7 +273,21 @@ public class NameUtil {
         }
         return existingArgNames;
     }
-    
+
+    /**
+     * Generates a name for a raw type.
+     *
+     * @param rawType The raw type descriptor kind.
+     * @return The generated name for the raw type.
+     */
+    private static String generateNameForRawType(TypeDescKind rawType) {
+        return switch (rawType) {
+            case RECORD -> "mappingResult";
+            case TUPLE, ARRAY -> "listResult";
+            default -> rawType.getName() + "Result";
+        };
+    }
+
     /**
      * Coverts a given text to camel case.
      *
@@ -315,7 +338,7 @@ public class NameUtil {
             // Remove '_' underscores
             while (newName.contains("_")) {
                 String[] parts = newName.split("_");
-                List<String> restParts = Arrays.stream(parts, 1, parts.length).collect(Collectors.toList());
+                List<String> restParts = Arrays.stream(parts, 1, parts.length).toList();
                 newName = parts[0] + StringUtils.capitalize(String.join("", restParts));
             }
             // If empty, revert to original name
