@@ -32,6 +32,7 @@ import io.ballerina.compiler.api.symbols.resourcepath.util.NamedPathSegment;
 import io.ballerina.compiler.api.symbols.resourcepath.util.PathSegment;
 import io.ballerina.compiler.syntax.tree.ClientResourceAccessActionNode;
 import io.ballerina.compiler.syntax.tree.ComputedResourceAccessSegmentNode;
+import io.ballerina.compiler.syntax.tree.ExpressionNode;
 import io.ballerina.compiler.syntax.tree.IdentifierToken;
 import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.ParenthesizedArgList;
@@ -44,7 +45,6 @@ import org.apache.commons.lang3.tuple.Pair;
 import org.ballerinalang.annotation.JavaSPIService;
 import org.ballerinalang.langserver.common.utils.SymbolUtil;
 import org.ballerinalang.langserver.commons.BallerinaCompletionContext;
-import org.ballerinalang.langserver.commons.completion.LSCompletionException;
 import org.ballerinalang.langserver.commons.completion.LSCompletionItem;
 import org.ballerinalang.langserver.completions.SymbolCompletionItem;
 import org.ballerinalang.langserver.completions.builder.ResourcePathCompletionItemBuilder;
@@ -58,7 +58,6 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -76,7 +75,7 @@ public class ClientResourceAccessActionNodeContext
 
     @Override
     public List<LSCompletionItem> getCompletions(BallerinaCompletionContext context,
-                                                 ClientResourceAccessActionNode node) throws LSCompletionException {
+                                                 ClientResourceAccessActionNode node) {
 
         List<LSCompletionItem> completionItems = new ArrayList<>();
         if (onSuggestClients(node, context)) {
@@ -111,7 +110,7 @@ public class ClientResourceAccessActionNodeContext
             } else {
                 List<Node> arguments = new ArrayList<>();
                 node.arguments().ifPresent(argList ->
-                        arguments.addAll(argList.arguments().stream().collect(Collectors.toList())));
+                        arguments.addAll(argList.arguments().stream().toList()));
                 if (isNotInNamedArgOnlyContext(context, arguments)) {
                     completionItems.addAll(this.actionKWCompletions(context));
                     completionItems.addAll(this.expressionCompletions(context));
@@ -119,14 +118,13 @@ public class ClientResourceAccessActionNodeContext
                 completionItems.addAll(this.getNamedArgExpressionCompletionItems(context, node));
             }
         } else {
-            List<Symbol> clientActions = this.getClientActions(expressionType.get());
+            List<MethodSymbol> clientActions = this.getClientActions(expressionType.get());
             List<ResourceMethodSymbol> resourceMethodSymbols = clientActions.stream()
                     .filter(symbol -> symbol.kind() == SymbolKind.RESOURCE_METHOD)
-                    .map(symbol -> (ResourceMethodSymbol) symbol).collect(Collectors.toList());
+                    .map(symbol -> (ResourceMethodSymbol) symbol).toList();
             List<MethodSymbol> remoteMethods = clientActions.stream()
                     .filter(symbol -> symbol.kind() == SymbolKind.METHOD
-                            && ((MethodSymbol) symbol).qualifiers().contains(Qualifier.REMOTE))
-                    .map(symbol -> (MethodSymbol) symbol).collect(Collectors.toList());
+                            && symbol.qualifiers().contains(Qualifier.REMOTE)).toList();
 
             if (node.slashToken().isMissing()) {
                 completionItems.addAll(this.getCompletionItemList(remoteMethods, context));
@@ -214,23 +212,36 @@ public class ClientResourceAccessActionNodeContext
         Optional<TypeSymbol> parameterSymbol = getParameterTypeSymbol(context);
         for (int i = 0; i < completionItems.size(); i++) {
             LSCompletionItem completionItem = completionItems.get(i);
-            if (completionItem.getType() == LSCompletionItem.CompletionItemType.NAMED_ARG) {
+            LSCompletionItem.CompletionItemType type = completionItem.getType();
+            if (type == LSCompletionItem.CompletionItemType.NAMED_ARG) {
                 sortNamedArgCompletionItem(context, completionItem);
             } else if (parameterSymbol.isEmpty()) {
-                sortParameterlessCompletionItem(context, completionItem);
-            } else if (completionItem.getType() == LSCompletionItem.CompletionItemType.SYMBOL) {
-                SymbolCompletionItem symbolCompletionItem = (SymbolCompletionItem) completionItem;
-                if (symbolCompletionItem.getSymbol().isPresent() &&
-                        symbolCompletionItem.getSymbol().get().kind() == SymbolKind.RESOURCE_METHOD) {
-                    completionItem.getCompletionItem().setSortText(
-                            SortingUtil.genSortTextByAssignability(context, completionItem, parameterSymbol.get()) +
-                                    SortingUtil.genSortText(i + 1));
-                }
-                sortDefaultCompletionItem(context, parameterSymbol.get(), completionItem);
+                sortParameterlessCompletionItem(context, i, completionItem);
+            } else if (type == LSCompletionItem.CompletionItemType.SYMBOL) {
+                sortSymbolCompletionItem(context, parameterSymbol.get(), i, completionItem);
             } else {
                 sortDefaultCompletionItem(context, parameterSymbol.get(), completionItem);
             }
         }
+    }
+
+    private static void sortParameterlessCompletionItem(BallerinaCompletionContext context, int rank,
+                                                          LSCompletionItem completionItem) {
+        completionItem.getCompletionItem().setSortText(SortingUtil.genSortText(
+                SortingUtil.toRank(context, completionItem)) + SortingUtil.genSortText(rank + 1));
+    }
+
+    private static void sortSymbolCompletionItem(BallerinaCompletionContext context, TypeSymbol parameterSymbol,
+                                                   int rank, LSCompletionItem completionItem) {
+        SymbolCompletionItem symbolCompletionItem = (SymbolCompletionItem) completionItem;
+        Optional<Symbol> symbol = symbolCompletionItem.getSymbol();
+        if (symbol.isPresent() && symbol.get().kind() == SymbolKind.RESOURCE_METHOD) {
+            completionItem.getCompletionItem().setSortText(
+                    SortingUtil.genSortTextByAssignability(context, completionItem, parameterSymbol) +
+                            SortingUtil.genSortText(rank + 1));
+            return;
+        }
+        sortDefaultCompletionItem(context, parameterSymbol, completionItem);
     }
 
     private List<LSCompletionItem> getPathSegmentCompletionItems(ClientResourceAccessActionNode node,
@@ -343,9 +354,10 @@ public class ClientResourceAccessActionNodeContext
                     return Pair.of(Collections.emptyList(), false);
                 }
                 if (node.kind() == SyntaxKind.COMPUTED_RESOURCE_ACCESS_SEGMENT) {
-                    Optional<TypeSymbol> exprType =
-                            semanticModel.get().typeOf(((ComputedResourceAccessSegmentNode) node).expression());
-                    if (exprType.isEmpty() || !exprType.get().subtypeOf(typeSymbol)) {
+                    ExpressionNode exprNode = ((ComputedResourceAccessSegmentNode) node).expression();
+                    Optional<TypeSymbol> exprType = semanticModel.get().typeOf(exprNode);
+                    if (exprType.isEmpty() || !ResourcePathCompletionUtil.checkSubtype(typeSymbol, exprType.get(),
+                            exprNode.toString())) {
                         return Pair.of(Collections.emptyList(), false);
                     }
                     if (segment.pathSegmentKind() == PathSegment.Kind.PATH_REST_PARAMETER
@@ -353,8 +365,9 @@ public class ClientResourceAccessActionNodeContext
                         completableSegmentStartIndex -= 1;
                     }
                     continue;
-                } else if (node.kind() == SyntaxKind.IDENTIFIER_TOKEN
-                        && semanticModel.get().types().STRING.subtypeOf(typeSymbol)) {
+                } else if (node.kind() == SyntaxKind.IDENTIFIER_TOKEN &&
+                        ResourcePathCompletionUtil.checkSubtype(typeSymbol, semanticModel.get().types().STRING,
+                                "\"" + ((IdentifierToken) node).text() + "\"")) {
                     if (segment.pathSegmentKind() == PathSegment.Kind.PATH_REST_PARAMETER
                             && !ResourcePathCompletionUtil.isInMethodCallContext(accNode, context)) {
                         completableSegmentStartIndex -= 1;
@@ -407,7 +420,7 @@ public class ClientResourceAccessActionNodeContext
             return false;
         }
         return (functionTypeSymbol.params().isEmpty()
-                || functionTypeSymbol.params().get().size() == 0)
+                || functionTypeSymbol.params().get().isEmpty())
                 && functionTypeSymbol.restParam().isEmpty();
     }
 }
