@@ -90,7 +90,7 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
          */
         List<IdentifierToken> moduleName = node.moduleName().stream()
                 .filter(token -> !token.isMissing())
-                .collect(Collectors.toList());
+                .toList();
 
         ArrayList<LSCompletionItem> completionItems = new ArrayList<>();
         ContextScope contextScope;
@@ -220,8 +220,8 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
         List<LSPackageLoader.ModuleInfo> moduleList =
                 LSPackageLoader.getInstance(ctx.languageServercontext()).getAllVisiblePackages(ctx);
         moduleList.forEach(pkg -> {
-            String orgName = pkg.packageOrg().value();
-            String pkgName = pkg.packageName().value();
+            String orgName = pkg.packageOrg();
+            String pkgName = pkg.packageName();
             if (orgName.equals(Names.BALLERINA_INTERNAL_ORG.getValue())
                     || ModuleUtil.matchingImportedModule(ctx, pkg).isPresent()) {
                 // Avoid suggesting the ballerinai org name
@@ -230,8 +230,8 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
             List<String> pkgNameComps = Arrays.stream(pkgName.split("\\."))
                     .map(ModuleUtil::escapeModuleName)
                     .map(CommonUtil::escapeReservedKeyword)
-                    .collect(Collectors.toList());
-            String label = pkg.packageOrg().value().isEmpty() ? String.join(".", pkgNameComps)
+                    .toList();
+            String label = pkg.packageOrg().isEmpty() ? String.join(".", pkgNameComps)
                     : CommonUtil.getPackageLabel(pkg);
             String insertText = orgName.isEmpty() ? "" : orgName + Names.ORG_NAME_SEPARATOR.getValue();
 
@@ -264,7 +264,7 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
          */
         List<String> modNameString = moduleName.stream()
                 .map(token -> token.text().replace("'", ""))
-                .collect(Collectors.toList());
+                .toList();
         Optional<Project> currentProject = context.workspace().project(context.filePath());
         if (currentProject.isEmpty() || currentProject.get().kind() == ProjectKind.SINGLE_FILE_PROJECT
                 || !modNameString.get(0).equals(pkgName)) {
@@ -327,8 +327,8 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
                     .map(IdentifierToken::text)
                     .collect(Collectors.joining("."));
 
-            moduleList = LSPackageLoader.getInstance(serverContext).getCentralPackages(serverContext);
-            moduleList.forEach(ballerinaPackage -> packageList.add(ballerinaPackage.packageName().value()));
+            moduleList = LSPackageLoader.getInstance(serverContext).getCentralPackages();
+            moduleList.forEach(ballerinaPackage -> packageList.add(ballerinaPackage.packageName()));
             List<String> filteredPackageNames = getFilteredPackages(packageList, prefix, context);
             for (String filteredPackage : filteredPackageNames) {
                 LSCompletionItem completionItem = getImportCompletion(context, filteredPackage, filteredPackage);
@@ -339,9 +339,9 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
         }
         moduleList = LSPackageLoader.getInstance(serverContext).getAllVisiblePackages(context);
         moduleList.forEach(ballerinaPackage -> {
-            String packageName = ballerinaPackage.packageName().value();
+            String packageName = ballerinaPackage.packageName();
             String insertText;
-            if (orgName.equals(ballerinaPackage.packageOrg().value()) && !addedPkgNames.contains(packageName)
+            if (orgName.equals(ballerinaPackage.packageOrg()) && !addedPkgNames.contains(packageName)
                     && ModuleUtil.matchingImportedModule(context, ballerinaPackage).isEmpty()) {
                 if (orgName.equals(Names.BALLERINA_ORG.value)
                         && packageName.startsWith(Names.LANG.getValue() + Names.DOT.getValue())) {
