@@ -59,12 +59,13 @@ import org.eclipse.lsp4j.jsonrpc.services.JsonRequest;
 import org.eclipse.lsp4j.jsonrpc.services.JsonSegment;
 import org.eclipse.lsp4j.services.LanguageServer;
 
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of Ballerina Document extension for Language Server.
@@ -334,7 +335,7 @@ public class BallerinaDocumentService implements ExtendedLanguageServerService {
                 Optional<Project> project = workspaceManager.project(filePath.get());
 
                 // Loop through project modules to find the document of the function declaration
-                project.get().currentPackage().modules().forEach(module -> {
+                project.get().currentPackage().modules().forEach(module ->
                     module.documentIds().forEach(id -> {
                         Document document = module.document(id);
                         if (functionPath.equals(document.name())) {
@@ -373,8 +374,7 @@ public class BallerinaDocumentService implements ExtendedLanguageServerService {
                                 }
                             });
                         }
-                    });
-                });
+                    }));
                 return reply;
             } catch (Throwable e) {
                 reply.setParseSuccess(false);
@@ -402,6 +402,7 @@ public class BallerinaDocumentService implements ExtendedLanguageServerService {
                 if (project.isEmpty()) {
                     return ballerinaProject;
                 }
+                ballerinaProject.setOrgName(project.get().currentPackage().packageOrg().value());
                 ballerinaProject.setPath(project.get().sourceRoot().toString());
                 ProjectKind projectKind = project.get().kind();
                 if (projectKind != ProjectKind.SINGLE_FILE_PROJECT) {
@@ -420,7 +421,7 @@ public class BallerinaDocumentService implements ExtendedLanguageServerService {
     @JsonRequest
     public CompletableFuture<List<PublishDiagnosticsParams>> diagnostics(BallerinaProjectParams params) {
         return CompletableFuture.supplyAsync(() -> {
-            String fileUri = params.getDocumentIdentifier().getUri();
+            String fileUri = URLDecoder.decode(params.getDocumentIdentifier().getUri(), StandardCharsets.UTF_8);
             try {
                 DocumentServiceContext context = ContextBuilder.buildDocumentServiceContext(fileUri,
                         this.workspaceManagerProxy.get(fileUri),
@@ -430,7 +431,7 @@ public class BallerinaDocumentService implements ExtendedLanguageServerService {
                 return diagnosticsHelper.getLatestDiagnostics(context).entrySet().stream()
                         .filter(entry -> fileUri.equals(entry.getKey()))
                         .map((entry) -> new PublishDiagnosticsParams(entry.getKey(), entry.getValue()))
-                        .collect(Collectors.toList());
+                        .toList();
             } catch (Throwable e) {
                 String msg = "Operation 'ballerinaDocument/diagnostics' failed!";
                 this.clientLogger.logError(DocumentContext.DC_DIAGNOSTICS, msg, e, params.getDocumentIdentifier(),
