@@ -74,7 +74,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
@@ -86,7 +85,7 @@ import static io.ballerina.compiler.api.symbols.SymbolKind.VARIABLE;
 /**
  * Utility functions for the signature help.
  */
-public class SignatureHelpUtil {
+public final class SignatureHelpUtil {
 
     private SignatureHelpUtil() {
     }
@@ -281,7 +280,7 @@ public class SignatureHelpUtil {
             filteredContent = visibleSymbols.stream()
                     .filter(symbolPredicate.and(symbol -> symbol.getName().isPresent()
                             && symbol.getName().get().equals(funcName)))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return filteredContent.stream().findAny();
@@ -327,37 +326,29 @@ public class SignatureHelpUtil {
     }
 
     private static Optional<? extends TypeSymbol> getTypeDesc(SignatureContext ctx, ExpressionNode expr) {
-        switch (expr.kind()) {
-            case SIMPLE_NAME_REFERENCE:
-                /*
-                Captures the following
-                (1) fieldName
-                 */
-                return getTypeDescForNameRef(ctx, (SimpleNameReferenceNode) expr);
-            case FUNCTION_CALL:
-                /*
-                Captures the following
-                (1) functionName()
-                 */
-                return getTypeDescForFunctionCall(ctx, (FunctionCallExpressionNode) expr);
-            case METHOD_CALL: {
-                /*
-                Address the following
-                (1) test.testMethod()
-                 */
-                return getTypeDescForMethodCall(ctx, (MethodCallExpressionNode) expr);
-            }
-            case FIELD_ACCESS: {
-                /*
-                Address the following
-                (1) test1.test2
-                 */
-                return getTypeDescForFieldAccess(ctx, (FieldAccessExpressionNode) expr);
-            }
-
-            default:
-                return Optional.empty();
-        }
+        return switch (expr.kind()) {
+            /*
+            Captures the following
+            (1) fieldName
+             */
+            case SIMPLE_NAME_REFERENCE -> getTypeDescForNameRef(ctx, (SimpleNameReferenceNode) expr);
+            /*
+            Captures the following
+            (1) functionName()
+             */
+            case FUNCTION_CALL -> getTypeDescForFunctionCall(ctx, (FunctionCallExpressionNode) expr);
+            /*
+            Address the following
+            (1) test.testMethod()
+             */
+            case METHOD_CALL -> getTypeDescForMethodCall(ctx, (MethodCallExpressionNode) expr);
+            /*
+            Address the following
+            (1) test1.test2
+             */
+            case FIELD_ACCESS -> getTypeDescForFieldAccess(ctx, (FieldAccessExpressionNode) expr);
+            default -> Optional.empty();
+        };
     }
 
     private static Optional<? extends TypeSymbol> getTypeDescForFieldAccess(
@@ -371,16 +362,17 @@ public class SignatureHelpUtil {
         }
 
         TypeSymbol rawType = CommonUtil.getRawType(typeDescriptor.get());
-        switch (rawType.typeKind()) {
-            case OBJECT:
+        return switch (rawType.typeKind()) {
+            case OBJECT -> {
                 ObjectFieldSymbol objField = ((ObjectTypeSymbol) rawType).fieldDescriptors().get(fieldName);
-                return objField != null ? Optional.of(objField.typeDescriptor()) : Optional.empty();
-            case RECORD:
+                yield objField != null ? Optional.of(objField.typeDescriptor()) : Optional.empty();
+            }
+            case RECORD -> {
                 RecordFieldSymbol recField = ((RecordTypeSymbol) rawType).fieldDescriptors().get(fieldName);
-                return recField != null ? Optional.of(recField.typeDescriptor()) : Optional.empty();
-            default:
-                return Optional.empty();
-        }
+                yield recField != null ? Optional.of(recField.typeDescriptor()) : Optional.empty();
+            }
+            default -> Optional.empty();
+        };
     }
 
     private static Optional<? extends TypeSymbol> getTypeDescForNameRef(SignatureContext context,
@@ -485,7 +477,7 @@ public class SignatureHelpUtil {
             }
 
             List<Node> resourcePathSegments = resourceNode.resourceAccessPath().stream()
-                    .filter(segmentNode -> !segmentNode.isMissing()).collect(Collectors.toList());
+                    .filter(segmentNode -> !segmentNode.isMissing()).toList();
 
             List<PathSegment> segments;
             if (resourcePath.kind() == ResourcePath.Kind.PATH_SEGMENT_LIST) {
