@@ -17,7 +17,13 @@
  */
 package org.ballerinalang.langserver.workspace;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
 import com.google.gson.JsonPrimitive;
+import io.ballerina.compiler.api.SemanticModel;
 import io.ballerina.projects.Document;
 import io.ballerina.projects.Module;
 import io.ballerina.projects.Project;
@@ -25,6 +31,7 @@ import io.ballerina.projects.ProjectException;
 import io.ballerina.projects.ProjectKind;
 import io.ballerina.projects.util.ProjectConstants;
 import org.apache.commons.io.FileUtils;
+import org.ballerinalang.diagramutil.DiagramUtil;
 import org.ballerinalang.langserver.command.executors.RunExecutor;
 import org.ballerinalang.langserver.command.executors.StopExecutor;
 import org.ballerinalang.langserver.common.utils.CommonUtil;
@@ -35,6 +42,7 @@ import org.ballerinalang.langserver.commons.command.LSCommandExecutorException;
 import org.ballerinalang.langserver.commons.eventsync.exceptions.EventSyncException;
 import org.ballerinalang.langserver.commons.workspace.WorkspaceDocumentException;
 import org.ballerinalang.langserver.contexts.LanguageServerContextImpl;
+import org.ballerinalang.langserver.extensions.ballerina.document.ExecutorPositionsUtil;
 import org.eclipse.lsp4j.DidChangeTextDocumentParams;
 import org.eclipse.lsp4j.DidOpenTextDocumentParams;
 import org.eclipse.lsp4j.FileChangeType;
@@ -56,7 +64,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -76,7 +83,7 @@ import static org.awaitility.Awaitility.await;
  * @since 2.0.0
  */
 public class TestWorkspaceManager {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/project");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/project");
     private final String dummyContent = "function foo() {" + CommonUtil.LINE_SEPARATOR + "}";
     private final String dummyDidChangeContent = "function foo1() {" + CommonUtil.LINE_SEPARATOR + "}";
     private BallerinaWorkspaceManager workspaceManager;
@@ -88,7 +95,7 @@ public class TestWorkspaceManager {
     }
 
     @Test(dataProvider = "fileOpenUpdateTestDataProvider")
-    public void testOpenDocument(Path filePath) throws IOException, WorkspaceDocumentException {
+    public void testOpenDocument(Path filePath) throws WorkspaceDocumentException {
         // Inputs from lang server
         openFile(filePath);
 
@@ -99,8 +106,7 @@ public class TestWorkspaceManager {
     }
 
     @Test(dataProvider = "fileOpenWithDuplicateFilesDataProvider")
-    public void testOpenDocumentWithDuplicateFiles(Path filePath) throws IOException,
-            WorkspaceDocumentException {
+    public void testOpenDocumentWithDuplicateFiles(Path filePath) {
         try {
             // Inputs from lang server
             openFile(filePath);
@@ -549,8 +555,69 @@ public class TestWorkspaceManager {
 
     @Test
     public void testWSRunStopProject()
-            throws WorkspaceDocumentException, EventSyncException, IOException, LSCommandExecutorException {
-        Path filePath = RESOURCE_DIRECTORY.resolve("long_running").resolve("main.bal").toAbsolutePath();
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException {
+        Path projectPath = RESOURCE_DIRECTORY.resolve("long_running");
+        Path filePath = projectPath.resolve("main.bal");
+        ExecuteCommandContext execContext = runViaLs(filePath);
+        stopViaLs(execContext, projectPath);
+    }
+
+    @Test
+    public void testSemanticApiAfterWSRun()
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException {
+        Path projectPath = RESOURCE_DIRECTORY.resolve("hello_service");
+        Path filePath = projectPath.resolve("main.bal");
+        ExecuteCommandContext execContext = runViaLs(filePath);
+
+        // Test syntax tree api
+        JsonElement syntaxTreeJSON = DiagramUtil.getSyntaxTreeJSON(workspaceManager.document(filePath).orElseThrow(),
+                workspaceManager.semanticModel(filePath).orElseThrow());
+        // 0 = func def 1 = func def 2 = class def, 3 = listener decl, 4 = service decl
+        JsonObject service = syntaxTreeJSON.getAsJsonObject().get("members").getAsJsonArray().get(4).getAsJsonObject();
+        Assert.assertEquals(service.get("kind").getAsString(), "ServiceDeclaration");
+
+        // test executor positions api
+        JsonArray execPositions = ExecutorPositionsUtil.getExecutorPositions(workspaceManager, filePath);
+        Assert.assertEquals(execPositions.getAsJsonArray().get(0).getAsJsonObject().get("name").getAsString(),
+                "hello");
+
+        stopViaLs(execContext, projectPath);
+    }
+
+    @Test
+    public void testSemanticApiAfterWSRunMultiMod()
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException, IOException {
+        Path projectPath = RESOURCE_DIRECTORY.resolve("multimod");
+        Path filePath = projectPath.resolve("main.bal");
+
+        DidOpenTextDocumentParams params = new DidOpenTextDocumentParams();
+        TextDocumentItem textDocument = new TextDocumentItem();
+        textDocument.setUri(filePath.toUri().toString());
+        textDocument.setText(new String(Files.readAllBytes(filePath)));
+        params.setTextDocument(textDocument);
+        workspaceManager.didOpen(filePath, params);
+
+        SemanticModel semanticModelPreExec = workspaceManager.semanticModel(filePath).orElseThrow();
+        JsonElement syntaxTreeJSONPreExec = DiagramUtil.getSyntaxTreeJSON(
+                workspaceManager.document(filePath).orElseThrow(),
+                semanticModelPreExec);
+
+        ExecuteCommandContext execContext = runViaLs(filePath);
+
+        SemanticModel semanticModelPostExec = workspaceManager.semanticModel(filePath).orElseThrow();
+        JsonElement syntaxTreeJSONPostExec = DiagramUtil.getSyntaxTreeJSON(
+                workspaceManager.document(filePath).orElseThrow(),
+                semanticModelPostExec);
+
+        Gson gson = new GsonBuilder().setPrettyPrinting().create();
+        Assert.assertEquals(gson.toJson(syntaxTreeJSONPreExec), gson.toJson(syntaxTreeJSONPostExec));
+
+        stopViaLs(execContext, projectPath);
+    }
+
+
+    private ExecuteCommandContext runViaLs(Path filePath)
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException {
         System.setProperty("java.command", guessJavaPath());
         System.setProperty(BALLERINA_HOME, "./build");
         workspaceManager.loadProject(filePath);
@@ -567,13 +634,16 @@ public class TestWorkspaceManager {
         Boolean didRan = runExecutor.execute(execContext);
         Assert.assertTrue(didRan);
         Assert.assertEquals(reduceToOutString(logCaptor), "Hello, World!" + System.lineSeparator());
+        return execContext;
+    }
 
+    private static void stopViaLs(ExecuteCommandContext execContext, Path projectPath) {
         StopExecutor stopExecutor = new StopExecutor();
         Boolean didStop = stopExecutor.execute(execContext);
         Assert.assertTrue(didStop);
 
-        Path target = RESOURCE_DIRECTORY.resolve("long_running").resolve("target");
-        FileUtils.deleteDirectory(target.toFile());
+        Path target = projectPath.resolve("target");
+        FileUtils.deleteQuietly(target.toFile());
     }
 
     private static String reduceToOutString(ArgumentCaptor<LogTraceParams> logCaptor) {
