@@ -28,7 +28,6 @@ import org.testng.annotations.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 
 /**
@@ -41,10 +40,10 @@ public class InvalidDataProviderTestCase extends BaseTestCase {
     private Path errorlogFile;
 
     @BeforeClass
-    public void setup() throws BallerinaTestException {
+    public void setup() {
         balClient = new BMainInstance(balServer);
         projectPath = singleFileTestsPath.resolve("invalid-data-providers").toString();
-        errorlogFile = Paths.get(projectPath).resolve("ballerina-internal.log");
+        errorlogFile = Path.of(projectPath).resolve("ballerina-internal.log");
     }
 
     @BeforeMethod
